@@ -1,10 +1,17 @@
 package serp.bytecode.lowlevel;
 
-import java.io.*;
-import java.util.*;
+import java.io.DataInput;
+import java.io.DataOutput;
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
 
-import serp.bytecode.visitor.*;
-import serp.util.*;
+import serp.bytecode.visitor.BCVisitor;
+import serp.bytecode.visitor.VisitAcceptor;
+import serp.util.Numbers;
 
 /**
  * A bytecode constant pool, containing entries for all strings,
@@ -16,8 +23,8 @@ import serp.util.*;
  * @author Abe White
  */
 public class ConstantPool implements VisitAcceptor {
-    private List _entries = new ArrayList(50);
-    private Map _lookup = new HashMap(50);
+    private List<Entry> _entries = new ArrayList<>(50);
+    private Map<Object,Entry> _lookup = new HashMap<>(50);
 
     /**
      * Default constructor.
@@ -27,25 +34,30 @@ public class ConstantPool implements VisitAcceptor {
 
     /**
      * Return all the entries in the pool.
+     * 
+     * @return all the entries in the pool
      */
     public Entry[] getEntries() {
-        List entries = new ArrayList(_entries.size());
+        List<Entry> entries = new ArrayList<>(_entries.size());
         Entry entry;
-        for (Iterator itr = _entries.iterator(); itr.hasNext();) {
+        for (Iterator<Entry> itr = _entries.iterator(); itr.hasNext();) {
             entry = (Entry) itr.next();
             if (entry != null)
                 entries.add(entry);
         }
+        
         return (Entry[]) entries.toArray(new Entry[entries.size()]);
     }
 
-    /**
-     * Retrieve the entry at the specified 1-based index.
-     *
-     * @throws IndexOutOfBoundsException if index is invalid,
-     * including the case that it points to the second slot of a
-     * long or double entry
-     */
+	/**
+	 * Retrieve the entry at the specified 1-based index.
+	 *
+	 * @throws IndexOutOfBoundsException if index is invalid, including the case
+	 *                                   that it points to the second slot of a long
+	 *                                   or double entry
+	 * @param index the entry index
+	 * @return the entry at the specified 1-based index
+	 */
     public Entry getEntry(int index) {
         Entry entry = (Entry) _entries.get(index - 1);
         if (entry == null)
@@ -53,9 +65,12 @@ public class ConstantPool implements VisitAcceptor {
         return entry;
     }
 
-    /**
-     * Return the index of the given entry, or 0 if it is not in the pool.
-     */
+	/**
+	 * Return the index of the given entry, or 0 if it is not in the pool.
+	 * 
+	 * @param entry the entry
+	 * @return the index of the given entry, or 0 if it is not in the pool
+	 */
     public int indexOf(Entry entry) {
         if (entry == null || entry.getPool() != this)
             return 0;
@@ -65,6 +80,7 @@ public class ConstantPool implements VisitAcceptor {
     /**
      * Add an entry to the pool.
      *
+     * @param entry the entry to add
      * @return the index at which the entry was added
      */
     public int addEntry(Entry entry) {
@@ -73,9 +89,13 @@ public class ConstantPool implements VisitAcceptor {
         return entry.getIndex();
     }
 
-    /**
-     * Add an entry to the pool using the given key.
-     */
+	/**
+	 * Add an entry to the pool using the given key.
+	 * 
+	 * @param key   the entry key
+	 * @param entry the entry to add
+	 * @return the newly added entry index
+	 */
     private int addEntry(Object key, Entry entry) {
         entry.setPool(this);
         _entries.add(entry);
@@ -83,12 +103,14 @@ public class ConstantPool implements VisitAcceptor {
         _lookup.put(key, entry);
         if (entry.isWide())
             _entries.add(null);
+        
         return entry.getIndex();
     }
 
     /**
      * Remove the given entry from the pool.
      *
+     * @param entry the entry to remove
      * @return false if the entry is not in the pool, true otherwise
      */
     public boolean removeEntry(Entry entry) {
@@ -122,7 +144,7 @@ public class ConstantPool implements VisitAcceptor {
      */
     public void clear() {
         Entry entry;
-        for (Iterator itr = _entries.iterator(); itr.hasNext();) {
+        for (Iterator<Entry> itr = _entries.iterator(); itr.hasNext();) {
             entry = (Entry) itr.next();
             if (entry != null) {
                 entry.setPool(null);
@@ -136,18 +158,23 @@ public class ConstantPool implements VisitAcceptor {
     /**
      * Return the number of places occupied in the pool, including the fact
      * that long and double entries occupy two places.
+     * 
+     * @return the number of places occupied in the pool
      */
     public int size() {
         return _entries.size();
     }
 
-    /**
-     * Return the index of the {@link UTF8Entry} with the given value, or
-     * 0 if it does not exist.
-     *
-     * @param add if true, the entry will be added if it does not
-     * already exist, and the new entry's index returned
-     */
+	/**
+	 * Return the index of the {@link UTF8Entry} with the given value, or 0 if it
+	 * does not exist.
+	 *
+	 * @param value the value to find
+	 * @param add   if true, the entry will be added if it does not already exist,
+	 *              and the new entry's index returned
+	 * @return the index of the {@link UTF8Entry} with the given value, or 0 if it
+	 *         does not exist
+	 */
     public int findUTF8Entry(String value, boolean add) {
         if (value == null) {
             if (add)
@@ -161,46 +188,52 @@ public class ConstantPool implements VisitAcceptor {
         return addEntry(value, new UTF8Entry(value));
     }
 
-    /**
-     * Return the constant pool index of the {@link DoubleEntry} for the given
-     * value, or 0 if it does not exist.
-     *
-     * @param value the value to find
-     * @param add if true, the entry will be added if it does not
-     * already exist, and the new entry's index returned
-     */
+	/**
+	 * Return the constant pool index of the {@link DoubleEntry} for the given
+	 * value, or 0 if it does not exist.
+	 *
+	 * @param value the value to find
+	 * @param add   if true, the entry will be added if it does not already exist,
+	 *              and the new entry's index returned
+	 * @return the constant pool index of the {@link DoubleEntry} for the given
+	 *         value, or 0 if it does not exist
+	 */
     public int findDoubleEntry(double value, boolean add) {
-        Double key = new Double(value);
+        Double key = Double.valueOf(value);
         int index = find(key);
         if (!add || (index > 0))
             return index;
         return addEntry(key, new DoubleEntry(value));
     }
 
-    /**
-     * Return the constant pool index of the {@link FloatEntry} for the given
-     * value, or 0 if it does not exist.
-     *
-     * @param value the value to find
-     * @param add if true, the entry will be added if it does not
-     * already exist, and the new entry's index returned
-     */
+	/**
+	 * Return the constant pool index of the {@link FloatEntry} for the given value,
+	 * or 0 if it does not exist.
+	 *
+	 * @param value the value to find
+	 * @param add   if true, the entry will be added if it does not already exist,
+	 *              and the new entry's index returned
+	 * @return the constant pool index of the {@link FloatEntry} for the given
+	 *         value, or 0 if it does not exist
+	 */
     public int findFloatEntry(float value, boolean add) {
-        Float key = new Float(value);
+        Float key = Float.valueOf(value);
         int index = find(key);
         if (!add || index > 0)
             return index;
         return addEntry(key, new FloatEntry(value));
     }
 
-    /**
-     * Return the constant pool index of the {@link IntEntry} for the given
-     * value, or 0 if it does not exist.
-     *
-     * @param value the value to find
-     * @param add if true, the entry will be added if it does not
-     * already exist, and the new entry's index returned
-     */
+	/**
+	 * Return the constant pool index of the {@link IntEntry} for the given value,
+	 * or 0 if it does not exist.
+	 *
+	 * @param value the value to find
+	 * @param add   if true, the entry will be added if it does not already exist,
+	 *              and the new entry's index returned
+	 * @return the constant pool index of the {@link IntEntry} for the given value,
+	 *         or 0 if it does not exist
+	 */
     public int findIntEntry(int value, boolean add) {
         Integer key = Numbers.valueOf(value);
         int index = find(key);
@@ -209,14 +242,16 @@ public class ConstantPool implements VisitAcceptor {
         return addEntry(key, new IntEntry(value));
     }
 
-    /**
-     * Return the constant pool index of the {@link LongEntry} for the given
-     * value, or 0 if it does not exist.
-     *
-     * @param value the value to find
-     * @param add if true, the entry will be added if it does not
-     * already exist, and the new entry's index returned
-     */
+	/**
+	 * Return the constant pool index of the {@link LongEntry} for the given value,
+	 * or 0 if it does not exist.
+	 *
+	 * @param value the value to find
+	 * @param add   if true, the entry will be added if it does not already exist,
+	 *              and the new entry's index returned
+	 * @return the constant pool index of the {@link LongEntry} for the given value,
+	 *         or 0 if it does not exist
+	 */
     public int findLongEntry(long value, boolean add) {
         Long key = Numbers.valueOf(value);
         int index = find(key);
@@ -225,14 +260,16 @@ public class ConstantPool implements VisitAcceptor {
         return addEntry(key, new LongEntry(value));
     }
 
-    /**
-     * Return the constant pool index of the {@link StringEntry} for the given
-     * string value, or 0 if it does not exist.
-     *
-     * @param value the value to find
-     * @param add if true, the entry will be added if it does not
-     * already exist, and the new entry's index returned
-     */
+	/**
+	 * Return the constant pool index of the {@link StringEntry} for the given
+	 * string value, or 0 if it does not exist.
+	 *
+	 * @param value the value to find
+	 * @param add   if true, the entry will be added if it does not already exist,
+	 *              and the new entry's index returned
+	 * @return the constant pool index of the {@link StringEntry} for the given
+	 *         string value, or 0 if it does not exist
+	 */
     public int findStringEntry(String value, boolean add) {
         int valueIndex = findUTF8Entry(value, add);
         if (valueIndex == 0)
@@ -245,14 +282,16 @@ public class ConstantPool implements VisitAcceptor {
         return addEntry(key, new StringEntry(valueIndex));
     }
 
-    /**
-     * Return the constant pool index of the {@link ClassEntry} for the given
-     * class name, or 0 if it does not exist.
-     *
-     * @param name the class name in internal form
-     * @param add if true, the entry will be added if it does not
-     * already exist, and the new entry's index returned
-     */
+	/**
+	 * Return the constant pool index of the {@link ClassEntry} for the given class
+	 * name, or 0 if it does not exist.
+	 *
+	 * @param name the class name in internal form
+	 * @param add  if true, the entry will be added if it does not already exist,
+	 *             and the new entry's index returned
+	 * @return the constant pool index of the {@link ClassEntry} for the given class
+	 *         name, or 0 if it does not exist
+	 */
     public int findClassEntry(String name, boolean add) {
         int nameIndex = findUTF8Entry(name, add);
         if (nameIndex == 0)
@@ -265,15 +304,17 @@ public class ConstantPool implements VisitAcceptor {
         return addEntry(key, new ClassEntry(nameIndex));
     }
 
-    /**
-     * Return the constant pool index of the {@link NameAndTypeEntry} for the
-     * given name and descriptor, or 0 if it does not exist.
-     *
-     * @param name the name of the entity
-     * @param desc the descriptor of the entity in internal form
-     * @param add if true, the entry will be added if it does not
-     * already exist, and the new entry's index returned
-     */
+	/**
+	 * Return the constant pool index of the {@link NameAndTypeEntry} for the given
+	 * name and descriptor, or 0 if it does not exist.
+	 *
+	 * @param name the name of the entity
+	 * @param desc the descriptor of the entity in internal form
+	 * @param add  if true, the entry will be added if it does not already exist,
+	 *             and the new entry's index returned
+	 * @return the constant pool index of the {@link NameAndTypeEntry} for the given
+	 *         name and descriptor, or 0 if it does not exist
+	 */
     public int findNameAndTypeEntry(String name, String desc, boolean add) {
         int nameIndex = findUTF8Entry(name, add);
         if (nameIndex == 0)
@@ -289,46 +330,52 @@ public class ConstantPool implements VisitAcceptor {
         return addEntry(key, new NameAndTypeEntry(nameIndex, descIndex));
     }
 
-    /**
-     * Return the constant pool index of the {@link FieldEntry} for the
-     * given name, descriptor, and owner class name.
-     *
-     * @param owner the name of the field's owning class in internal form
-     * @param name the name of the field
-     * @param desc the descriptor of the field in internal form
-     * @param add if true, the entry will be added if it does not
-     * already exist, and the new entry's index returned
-     */
+	/**
+	 * Return the constant pool index of the {@link FieldEntry} for the given name,
+	 * descriptor, and owner class name.
+	 *
+	 * @param owner the name of the field's owning class in internal form
+	 * @param name  the name of the field
+	 * @param desc  the descriptor of the field in internal form
+	 * @param add   if true, the entry will be added if it does not already exist,
+	 *              and the new entry's index returned
+	 * @return the constant pool index of the {@link FieldEntry} for the given name,
+	 *         descriptor, and owner class name
+	 */
     public int findFieldEntry(String owner, String name, String desc,
         boolean add) {
         return findComplexEntry(owner, name, desc, Entry.FIELD, add);
     }
 
-    /**
-     * Return the constant pool index of the {@link MethodEntry} for the
-     * given name, descriptor, and owner class name.
-     *
-     * @param owner the name of the method's owning class in internal form
-     * @param name the name of the method
-     * @param desc the descriptor of the method in internal form
-     * @param add if true, the entry will be added if it does not
-     * already exist, and the new entry's index returned
-     */
+	/**
+	 * Return the constant pool index of the {@link MethodEntry} for the given name,
+	 * descriptor, and owner class name.
+	 *
+	 * @param owner the name of the method's owning class in internal form
+	 * @param name  the name of the method
+	 * @param desc  the descriptor of the method in internal form
+	 * @param add   if true, the entry will be added if it does not already exist,
+	 *              and the new entry's index returned
+	 * @return the constant pool index of the {@link MethodEntry} for the given
+	 *         name, descriptor, and owner class name
+	 */
     public int findMethodEntry(String owner, String name, String desc,
         boolean add) {
         return findComplexEntry(owner, name, desc, Entry.METHOD, add);
     }
 
-    /**
-     * Return the constant pool index of the {@link InterfaceMethodEntry} for
-     * the given name, descriptor, and owner class name.
-     *
-     * @param owner the name of the method's owning class in internal form
-     * @param name the name of the method
-     * @param desc the descriptor of the method in internal form
-     * @param add if true, the entry will be added if it does not
-     * already exist, and the new entry's index returned
-     */
+	/**
+	 * Return the constant pool index of the {@link InterfaceMethodEntry} for the
+	 * given name, descriptor, and owner class name.
+	 *
+	 * @param owner the name of the method's owning class in internal form
+	 * @param name  the name of the method
+	 * @param desc  the descriptor of the method in internal form
+	 * @param add   if true, the entry will be added if it does not already exist,
+	 *              and the new entry's index returned
+	 * @return the constant pool index of the {@link InterfaceMethodEntry} for the
+	 *         given name, descriptor, and owner class name
+	 */
     public int findInterfaceMethodEntry(String owner, String name, String desc,
         boolean add) {
         return findComplexEntry(owner, name, desc, Entry.INTERFACEMETHOD, add);
@@ -348,17 +395,19 @@ public class ConstantPool implements VisitAcceptor {
         return addEntry(key, entry);
     }
     
-    /**
-     * Return the constant pool index of the {@link ComplexEntry} for the
-     * given name, descriptor, and owner class name.
-     *
-     * @param owner the name of the owning class in internal form
-     * @param name the name of the entity
-     * @param desc the descriptor of the entity in internal form
-     * @param type the type of entry: field, method, interface method
-     * @param add if true, the entry will be added if it does not
-     * already exist, and the new entry's index returned
-     */
+	/**
+	 * Return the constant pool index of the {@link ComplexEntry} for the given
+	 * name, descriptor, and owner class name.
+	 *
+	 * @param owner the name of the owning class in internal form
+	 * @param name  the name of the entity
+	 * @param desc  the descriptor of the entity in internal form
+	 * @param type  the type of entry: field, method, interface method
+	 * @param add   if true, the entry will be added if it does not already exist,
+	 *              and the new entry's index returned
+	 * @return the constant pool index of the {@link ComplexEntry} for the given
+	 *         name, descriptor, and owner class name
+	 */
     private int findComplexEntry(String owner, String name, String desc,
         int type, boolean add) {
         int classIndex = findClassEntry(owner, add);
@@ -403,7 +452,7 @@ public class ConstantPool implements VisitAcceptor {
         visit.enterConstantPool(this);
 
         Entry entry;
-        for (Iterator itr = _entries.iterator(); itr.hasNext();) {
+        for (Iterator<Entry> itr = _entries.iterator(); itr.hasNext();) {
             entry = (Entry) itr.next();
             if (entry == null)
                 continue;
@@ -416,6 +465,9 @@ public class ConstantPool implements VisitAcceptor {
 
     /**
      * Fill the constant pool from the given bytecode stream.
+     * 
+     * @param in the input stream
+     * @throws IOException stream handling exception
      */
     public void read(DataInput in) throws IOException {
         clear();
@@ -432,12 +484,15 @@ public class ConstantPool implements VisitAcceptor {
 
     /**
      * Write the constant pool to the given bytecode stream.
+     * 
+     * @param out the output stream
+     * @throws IOException stream handling exception
      */
     public void write(DataOutput out) throws IOException {
         out.writeShort(_entries.size() + 1);
 
         Entry entry;
-        for (Iterator itr = _entries.iterator(); itr.hasNext();) {
+        for (Iterator<Entry> itr = _entries.iterator(); itr.hasNext();) {
             entry = (Entry) itr.next();
             if (entry != null)
                 Entry.write(entry, out);
@@ -446,6 +501,9 @@ public class ConstantPool implements VisitAcceptor {
 
     /**
      * Called by constant pool entries when they are mutated.
+     * 
+     * @param origKey old key
+     * @param entry   the entry
      */
     void modifyEntry(Object origKey, Entry entry) {
         _lookup.remove(origKey);
@@ -454,6 +512,9 @@ public class ConstantPool implements VisitAcceptor {
 
     /**
      * Returns the constant pool index of the entry with the given key.
+     * 
+     * @param key the entry key
+     * @return the constant pool index of the entry with the given key
      */
     private int find(Object key) {
         Entry entry = (Entry) _lookup.get(key);
@@ -464,6 +525,9 @@ public class ConstantPool implements VisitAcceptor {
 
     /**
      * Return the hash key used for the specified entry.
+     * 
+     * @param entry the entry
+     * @return the hash key used for the specified entry
      */
     static Object getKey(Entry entry) {
         switch (entry.getType()) {
@@ -494,6 +558,14 @@ public class ConstantPool implements VisitAcceptor {
             NameAndTypeEntry nte = (NameAndTypeEntry) entry;
             return new NameAndTypeKey(nte.getNameIndex(),
                 nte.getDescriptorIndex());
+        case Entry.METHODHANDLE:
+            return new MethodHandleKey(((MethodHandleEntry)entry).getReferenceIndex());
+        case Entry.METHODTYPE:
+          return new MethodTypeKey(((MethodTypeEntry)entry).getDescriptorIndex());
+        case Entry.MODULE:
+          return new ModuleKey(((ModuleEntry) entry).getNameIndex());
+        case Entry.PACKAGE:
+          return new PackageKey(((PackageEntry) entry).getNameIndex());
         default:
             return null;
         }
@@ -509,6 +581,7 @@ public class ConstantPool implements VisitAcceptor {
             _index = index;
         }
 
+        @Override
         public int hashCode() {
             return _index;
         }
@@ -541,6 +614,42 @@ public class ConstantPool implements VisitAcceptor {
     }
 
     /**
+     * Key for module entries.
+     */
+    private static class ModuleKey extends PtrKey {
+        public ModuleKey(int index) {
+            super(index);
+        }
+    }
+
+    /**
+     * Key for package entries.
+     */
+    private static class PackageKey extends PtrKey {
+        public PackageKey(int index) {
+            super(index);
+        }
+    }
+
+    /**
+     * Key for method handle entries.
+     */
+    private static class MethodHandleKey extends PtrKey {
+        public MethodHandleKey(int index) {
+            super(index);
+        }
+    }
+
+    /**
+     * Key for method type entries.
+     */
+    private static class MethodTypeKey extends PtrKey {
+        public MethodTypeKey(int index) {
+            super(index);
+        }
+    }
+
+    /**
      * Base class key for entries with two ptr to other entries.
      */
     private static abstract class DoublePtrKey {
@@ -552,6 +661,7 @@ public class ConstantPool implements VisitAcceptor {
             _index2 = index2;
         }
 
+        @Override
         public int hashCode() {
             return _index1 ^ _index2;
         }
